# HashDAG

./: .gitignore  CMakeLists.txt  DAG_edits.sln  DAG_edits.vcxproj  LICENSE.txt  README.md  packages.config  run_all_benchmarks.sh  start.bat
assets/droid-sans-mono/: Source
python/: benchmark.py  benchmark_bucket_count.py  benchmark_bucket_count_nothread.py  benchmark_color_memory.py  benchmark_copy_compdecomp.py  benchmark_copy_compdecomp_sm.py  benchmark_copy_compdecomp_sm_voxels.py  benchmark_copy_edit_voxels.py  benchmark_copy_edits.py  benchmark_count_teaser_voxels.py  benchmark_edits.py  benchmark_edits_nocolor.py  benchmark_memory_overhead_buckets.py  benchmark_memory_overhead_pagesize.py  benchmark_page_size.py  benchmark_page_size_nothread.py  benchmark_paths.py  benchmark_rt.py  benchmark_small_edits.py  benchmark_small_edits_nocolor.py  benchmark_tools.py  plot_buckets_count.py  plot_buckets_distribution.py  plot_color_memory_numvoxels.py  plot_edits.py  plot_edits_basic.py  plot_edits_detailed_barchart_multiple.py  plot_edits_detailed_barchart_single_std.py  plot_edits_diff.py  plot_fig_bucketcount.py  plot_fig_color_memory.py  plot_fig_copy_compdecomp.py  plot_fig_copy_compdecomp_sm.py  plot_fig_copy_compdecomp_voxels_sm.py  plot_fig_copy_edits.py  plot_fig_copy_edits_voxels.py  plot_fig_edits.py  plot_fig_memory.py  plot_fig_pagesize.py  plot_fig_rt.py  (+19 more)
replays/: epiccitadel_copy.csv  epiccitadel_edits.csv  epiccitadel_edits_short.csv  epiccitadel_large_edits.csv  epiccitadel_move.csv  epiccitadel_singleframe.csv  epiccitadel_small_edits.csv  epiccitadel_teaser_church.csv  epiccitadel_teaser_statue.csv  epiccitadel_video_barrel_fill.csv  epiccitadel_video_church_tower.csv  epiccitadel_video_closeup.csv  epiccitadel_video_inn_sign.csv  epiccitadel_video_large_carving.csv  epiccitadel_video_large_carving_undo.csv  epiccitadel_video_large_view.csv  epiccitadel_video_paint.csv  epiccitadel_video_sphere_add.csv  epiccitadel_video_statue.csv  replay_camera.csv  replay_edits_add.csv  replay_edits_add_2.csv  replay_edits_remove.csv  sanmiguel_move.csv  sanmiguel_tree_copy.csv  sanmiguel_tree_copy2.csv  sponza_move.csv
src/: FastNoise.cpp  FastNoise.h  array.h  camera_view.h  color_utils.h  cuda_error_check.h  cuda_gl_buffer.h  cuda_math.h  dag_info.h  dag_tracer.cu  dag_tracer.h  engine.cpp  engine.h  fontstash.cpp  glfont.cpp  glfont.h  godbolt.cpp  godbolt.sh  hacky_profiler.cpp  hacky_profiler.hpp  hacky_profiler.inl  main.cpp  memory.cpp  memory.h  path-avx.h  path.h  replay.cpp  replay.h  script_definitions.h  serializer.h  shader.cpp  shader.h  stats.cpp  stats.h  tracer.cu  tracer.h  typedefs.h  utils.h  variable_weight_size_colors.h  video.cpp  (+1 more)
src/dags/: base_dag.h  dag_utils.h
src/dags/basic_dag/: basic_dag.cpp  basic_dag.h
src/gmath/: Matrix3x3.h  Quaternion.h  Vector3.h
src/shaders/: TextureFragmentShader.glsl  TransformVertexShader.glsl
videos/: epiccitadel_basic.txt
(+10 files in other folders)
